feat: signup for one user
